--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,6 +16,14 @@
 // automatically applied to the <body> element in the app.
 
 //
+
+@font-face {
+  font-family: "Rochester";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../assets/fonts/Rochester-Regular.ttf") format("truetype");
+}
+
 .text-primary {
   color: color($colors, primary);
 }
