--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,7 +21,7 @@
   font-family: "Rochester";
   font-style: normal;
   font-weight: 300;
-  src: url("../assets/fonts/Rochester-Regular.ttf") format("truetype");
+  src: url("../assets/fonts/Rochester-Regular.otf") format("truetype");
 }
 
 .text-primary {
