--- a/src/pages/konsep/konsep.scss
+++ b/src/pages/konsep/konsep.scss
@@ -44,7 +44,7 @@ page-konsep {
    top: 23%;
    font-size: 4rem;
    width: 100%;
-   color: #fff;
+   color: color($colors, primary);
    text-align: center;
    //background-color: #f2f2f2;
    //background: rgba(0, 0, 0, 0.3);
