--- a/src/pages/pembayaran/pembayaran.scss
+++ b/src/pages/pembayaran/pembayaran.scss
@@ -1,8 +1,5 @@
-page-rincian {
+page-pembayaran {
 
-  //.bg{
-  //background-image: linear-gradient(90deg, #FFEDE7, #FFF7F5);
-  //}
   .crincian{
   border-radius: 10px;
   box-shadow: none !important;
@@ -41,15 +38,6 @@ page-rincian {
  font-size: 90%;
  position: relative;
 
- }
-
- .tkontenn{
-   color:#FE8985;
-   background-color: #fff;
-   border:none;
-   line-height: 1.5;
-   font-weight: bold;
-   border-radius: 10px;
  }
 
 }
