--- a/src/pages/pembayaran/pembayaran.scss
+++ b/src/pages/pembayaran/pembayaran.scss
@@ -3,6 +3,7 @@ page-pembayaran {
   .crincian{
   border-radius: 10px;
   box-shadow: none !important;
+  background-color: #f1f1f1;
   }
 
   .crincian-actived{
