--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -48,4 +48,13 @@ page-history {
    color: red;
  }
 
+ .tkontenn{
+  color:#FE8985;
+  background-color: #fff;
+  border:none;
+  line-height: 1.5;
+  font-weight: bold;
+  border-radius: 10px;
+}
+
 }
